tests/NormalTests/paczka1/small_fuzzy/70304155.err
Error in line 2: 0Ao0I S489 3,7
Error in line 12: u5BgjTdThON S946 94,65
Error in line 9: S489 A432 86,2
